--- a/labs/styles.css
+++ b/labs/styles.css
@@ -290,7 +290,7 @@ div.feedback-container {
     position: relative;
     width: 400px;
     height: 115px;
-    border: 3px solid #7721ad;
+    border: 3px solid #9c49cf;
     border-radius: 10px;
 }
   
