--- a/labs/styles.css
+++ b/labs/styles.css
@@ -58,7 +58,9 @@ nav {
     height: 100%;
     width: 200px;
     background-color: #feafe5;
-    padding-top: 20px;
+    padding-top: 70px; /* щоб не заходило під хедер */
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
 }
 
 nav ul {
@@ -78,6 +80,19 @@ nav ul li a {
     font-weight: bold;
     text-align: left;
     border-radius: 5px;
+}
+
+nav button {
+    display: block;
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    text-align: left;
+    border-radius: 8px;
+    cursor: pointer; 
+    transition: background-color 0.3s;  
+    margin: 10px;         
 }
 
 nav ul li a:hover {
